--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,7 +1,54 @@
 :host {
-  p {
-    font-size: 1rem;
-    line-height: 1.2rem;
-    font-family: sofia-pro, sans-serif;
+  .shopping {
+    background: transparent url(https://ddnh378lrqdgf.cloudfront.net/static/images/new/patterns/blue.png) 0 0 repeat;
+    background-size: 207px;
+
+    .container {
+      max-width: 800px;
+      flex-direction: row-reverse;
+      display: flex;
+      align-items: flex-end;
+
+      .shopping-description {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        height: 719px;
+        padding: 0;
+        flex-direction: column;
+        min-width: 320px;
+
+        h3 {
+          font-size: 36px;
+        }
+
+        p {
+          font-size: 24px;
+          line-height: 1.5;
+          font-weight: 300;
+        }
+
+        /deep/ .mat-list {
+          .mat-list-item {
+            color: #fff;
+            font-size: 24px;
+            font-weight: 300;
+
+            .mat-list-item-content {
+              padding: 0;
+            }
+
+            .mat-icon {
+              color: #003d45;
+              margin-right: 5px;
+            }
+          }
+        }
+      }
+
+      .shopping-image {
+        width: 624px;
+      }
+    }
   }
 }
