--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,11 @@
 <div class="container">
-
-  <div class="footer__app-links visible-desktop-up">
-    <a href="/">
-      <img class="logo" src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/logo/Logo.svg" alt="Out of Milk" height="29">
-    </a>
-
-    
-    <div class="store-links">
+  <div class="row logo-market-icons">
+    <div class="col-md-4">
+      <a [routerLink]="['/']">
+        <img class="logo" src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/logo/Logo.svg" alt="Out of Milk" height="29">
+      </a>
+    </div>
+    <div class="col-md-8 text-right market-icons">
       <a href="https://app.adjust.com/504j97?campaign=Web&amp;adgroup=Homepage">
         <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/storeBadges/badge_apple_app_store_en.png" alt="App Store" height="25">
       </a>
@@ -32,30 +31,20 @@
     </button>
   </mat-list>
 
-  <ul class="footer__nav">
-    <li><a href="/About.aspx">About</a></li>
-    <li><a href="/features">Features</a></li>
-    <li><a href="/Terms.aspx">Terms</a></li>
-    <li><a href="/Privacy.aspx">Privacy</a></li>
-    <li><a href="https://outofmilk.zendesk.com/hc/en-us">Support</a></li>
-    <li><a href="/EULA.aspx">EULA</a></li>
-    <li><a href="/Impressum">Impressum</a></li>
-  </ul>
+  <div class="copyright">Copyright © 2010–2019 Bonial International GmbH. Out of Milk is © Bonial International GmbH.</div>
 
-  <h4 class="h4">Copyright © 2010–2019 Bonial International GmbH. Out of Milk is © Bonial International GmbH.</h4>
-
-  <ul class="social">
-    <li class="social__item">
-      <a class="social__link" href="http://www.facebook.com/pages/Out-of-Milk/101211643275689">
-        <span class="social__icon icon icon-facebook"></span>
-        <p class="social__text visible-tablet-landscape-up">Join us On Facebook</p>
+  <mat-list class="social">
+    <mat-list-item class="facebook">
+      <a href="http://www.facebook.com/pages/Out-of-Milk/101211643275689">
+        <span class="icon-facebook-with-circle"></span>
+        Join us On Facebook
       </a>
-    </li>
-    <li class="social__item">
-      <a class="social__link" href="https://twitter.com/outofmilk">
-        <span class="social__icon icon icon-twitter"></span>
-        <p class="social__text visible-tablet-landscape-up">Follow us on Twitter</p>
+    </mat-list-item>
+    <mat-list-item class="twitter">
+      <a href="https://twitter.com/outofmilk">
+        <span class="icon-twitter-with-circle"></span>
+        Follow us on Twitter
       </a>
-    </li>
-  </ul>
+    </mat-list-item>
+  </mat-list>
 </div>
