--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,5 +1,6 @@
 :host {
-  background: #050505;
+  background: #050505 url(https://ddnh378lrqdgf.cloudfront.net/static/images/new/patterns/dark.png) repeat 50% 50%;
+  background-size: 207px;
   display: flex;
   align-items: center;
   min-height: 394px;
@@ -7,8 +8,25 @@
   .container {
     width: 800px;
 
+    .logo-market-icons {
+      border-bottom: 1px solid #373737;
+      padding: 17px 0 15px;
+      margin: 0;
+
+      [class^="col-"] {
+        padding: 0;
+      }
+
+      .market-icons {
+        a {
+          margin-left: 7px;
+        }
+      }
+    }
+
     .bottom-menu {
-      display: flex;
+      display: inline-flex;
+      padding: 15px 0 0;
 
       .mat-list-item {
         color: #fff;
@@ -16,6 +34,73 @@
         border: 0;
         padding: 0;
         font-size: 12px;
+        font-weight: 300;
+        border-right: 1px solid #fff;
+        height: 18px;
+        padding-right: 8px;
+        padding-left: 8px;
+        outline: none;
+        cursor: pointer;
+
+        &:first-child {
+          padding-left: 0;
+        }
+
+        &:last-child {
+          padding-right: 0;
+          border-right: 0;
+        }
+      }
+    }
+
+    .copyright {
+      text-align: left;
+      padding: 10px 0 0;
+      font-size: 12px;
+      letter-spacing: 0.4px;
+      color: #c3c3c3;
+      font-weight: 300;
+    }
+
+    .social {
+      padding: 0;
+      display: inline-flex;
+      margin: 20px 0;
+
+      /deep/ .mat-list-item {
+        height: auto;
+        width: auto;
+
+        .mat-list-item-content {
+          padding: 0;
+
+          a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 12px;
+
+            [class^="icon-"] {
+              margin-right: 7px;
+              font-size: 18px;
+              position: relative;
+              top: 3px;
+            }
+          }
+        }
+
+        &.facebook {
+          margin-right: 15px;
+
+          [class^="icon-"] {
+            color: #23489E;
+          }
+        }
+
+        &.twitter {
+          [class^="icon-"] {
+            color: #54B9CC;
+          }
+        }
       }
     }
   }
