--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,5 +1,4 @@
 :host {
-  font-family: "sofia-pro",sans-serif;
   display: flex;
   height: 65px;
   align-items: center;
@@ -47,7 +46,6 @@
             .mat-button {
               font-weight: 400;
               font-size: 16px;
-              font-family: sofia-pro, sans-serif;
               background: none;
               padding-left: 12px;
               padding-right: 12px;
@@ -79,12 +77,12 @@
                     font-size: 16px;
                     white-space: nowrap;
                     display: block;
-                    padding: 12px 16px;
+                    padding: 0px 16px;
                     background: none;
                     border: 0;
-                    font-family: sofia-pro, sans-serif;
                     text-align: left;
                     max-width: 200px;
+                    height: 46px;
                     width: auto;
 
                     &:hover {
