--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,17 +9,25 @@
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 @import '~bootstrap/scss/bootstrap';
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'assets/icons/style.css';
 
-.tk-sofia-pro { font-family: "sofia-pro",sans-serif; }
+.tk-sofia-pro { font-family: 'sofia-pro',sans-serif; }
 
 html {
   line-height: 1.15;
   height: 100%;
+  font-family: 'sofia-pro',sans-serif;
 }
 
 body {
   height: 100%;
   margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'sofia-pro',sans-serif !important;
+  font-weight: 700 !important;
 }
 
 .container {
