--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <owl-carousel-o *ngIf="carouselOptions && slides.length" [options]="carouselOptions">
   <ng-container *ngFor="let slide of slides">
-    <ng-template carouselSlide [id]="slide.id">
+    <ng-template carouselSlide [id]="slide.id" [dotContent]="slide.titleTab">
       <div class="owl-slide-background" [ngStyle]="{'background-image': 'url(' + slide.bgImagePath + ')'}">
         <div class="row">
           <div class="col">
