--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
         <img class="logo" src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/logo/Logo.svg" alt="Out of Milk" height="29">
       </a>
     </div>
-    <div class="col-md-8 text-right market-icons">
+    <div class="col-md-8 market-icons">
       <a href="https://app.adjust.com/504j97?campaign=Web&amp;adgroup=Homepage">
         <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/storeBadges/badge_apple_app_store_en.png" alt="App Store" height="25">
       </a>
@@ -37,13 +37,13 @@
     <mat-list-item class="facebook">
       <a href="http://www.facebook.com/pages/Out-of-Milk/101211643275689">
         <span class="icon-facebook-with-circle"></span>
-        Join us On Facebook
+        <span>Join us On Facebook</span>
       </a>
     </mat-list-item>
     <mat-list-item class="twitter">
       <a href="https://twitter.com/outofmilk">
         <span class="icon-twitter-with-circle"></span>
-        Follow us on Twitter
+        <span>Follow us on Twitter</span>
       </a>
     </mat-list-item>
   </mat-list>
