--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,27 +1,19 @@
-@import url("https://p.typekit.net/p.css?s=1&k=usz0ztd&ht=tk&f=24547&a=6495120&app=typekit&e=css");
-
-@font-face {
-  font-family:"sofia-pro";
-  src:url("https://use.typekit.net/af/5855b2/00000000000000003b9b1a98/27/l?primer=81a69539b194230396845be9681d114557adfb35f4cccc679c164afb4aa47365&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/5855b2/00000000000000003b9b1a98/27/d?primer=81a69539b194230396845be9681d114557adfb35f4cccc679c164afb4aa47365&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/5855b2/00000000000000003b9b1a98/27/a?primer=81a69539b194230396845be9681d114557adfb35f4cccc679c164afb4aa47365&fvd=n4&v=3") format("opentype");
-  font-style:normal;font-weight:400;
-}
-
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 @import '~bootstrap/scss/bootstrap';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~perfect-scrollbar/css/perfect-scrollbar.css';
 @import 'assets/icons/style.css';
 
 * {
   outline: none !important;
 }
 
-.tk-sofia-pro { font-family: 'sofia-pro',sans-serif; }
-
 html {
   line-height: 1.15;
   height: 100%;
-  font-family: 'sofia-pro',sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 body {
@@ -30,11 +22,23 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'sofia-pro',sans-serif !important;
+  font-family: 'Raleway', sans-serif !important;
   font-weight: 700 !important;
 }
 
 .container {
   max-width: 1050px;
   margin: 0 auto;
+}
+
+ng-scrollbar {
+  --scrollbar-color: #eee !important;
+  --scrollbar-container-color: transparent !important;
+  --scrollbar-thumb-color: #ff8f44 !important;
+  --scrollbar-thumb-hover-color: #ff5114 !important;
+  --scrollbar-border-radius: 2px !important;
+  --scrollbar-size: 10px !important;
+  --scrollbar-padding: 0px !important;
+  --scroll-view-margin: 0px !important;
+  --scroll-view-color: transparent !important;
 }
