--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,22 +1,37 @@
 <div class="container">
   <h1>Checkout</h1>
 
-  <div class="row checkout">
-    <div class="col-md-3">
-      <ng-scrollbar class="texts-list">
-        <mat-list>
-          <mat-list-item *ngFor="let text of textsList" [innerText]="text"></mat-list-item>
-        </mat-list>
-      </ng-scrollbar>
+  <ng-scrollbar [trackY]="false" [trackX]="true">
+    <div class="categories-list">
+      <div
+        *ngFor="let category of categoriesList"
+        (click)="selectCategory(category.id)"
+        [class.active]="category.id === selectedCategory"
+        class="category"
+      >
+        <div class="category-icon">
+          <mat-icon [style.color]="category.color || 'black'">{{category.icon}}</mat-icon>
+        </div>
+        <div class="category-title" [innerText]="category.title"></div>
+      </div>
     </div>
-    <div class="col-md-6">
-      <mat-form-field class="search-bar">
-        <input matInput placeholder="Search" type="text" name="search" (input)="onSearch($event)">
-        <span matPrefix>
-          <mat-icon>search</mat-icon>
-        </span>
-      </mat-form-field>
+  </ng-scrollbar>
 
+  <mat-form-field class="search-bar">
+    <input matInput placeholder="Search" type="text" name="search" (input)="onSearch($event)">
+    <span matPrefix>
+      <mat-icon>search</mat-icon>
+    </span>
+    <span (click)="isShowCart = !isShowCart" matSuffix class="cart-button">
+      <mat-icon>shopping_basket</mat-icon>
+      <span *ngIf="selectedTiles.length" [innerText]="selectedTiles.length" class="cart-selected-tiles"></span>
+    </span>
+  </mat-form-field>
+
+  <div [innerText]="getSelectedSum() | currency" class="sum"></div>
+
+  <div class="row checkout">
+    <div class="col-md-8">
       <ng-scrollbar class="tiles-list">
         <mat-grid-list cols="3">
           <mat-grid-tile
@@ -31,8 +46,8 @@
         </mat-grid-list>
       </ng-scrollbar>
     </div>
-    <div class="col-md-3">
-      <ng-scrollbar class="selected-tiles-list">
+    <div class="col-md-4 cart" [class.show]="isShowCart" [class.empty]="!selectedTiles.length">
+      <ng-scrollbar *ngIf="selectedTiles.length" class="selected-tiles-list">
         <div *ngFor="let tile of selectedTiles" class="selected-tile">
           <div class="selected-tile-title" [innerText]="tile.title"></div>
           <div class="selected-tile-price" [innerText]="tile.price | currency"></div>
@@ -42,9 +57,7 @@
         </div>
       </ng-scrollbar>
 
-      <mat-divider></mat-divider>
-
-      <div [innerText]="getSelectedSum() | currency" class="sum"></div>
+      <span *ngIf="!selectedTiles.length" class="text-secondary">Empty</span>
     </div>
   </div>
 </div>
