--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -2,6 +2,40 @@
   display: block;
   margin: 80px 0;
 
+  .nav-scrollbar {
+    position: relative;
+
+    .nav-scrollbar-left {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 130px;
+      width: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,0.05);
+      z-index: 1;
+    }
+
+    .nav-scrollbar-right {
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 130px;
+      width: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,0.05);
+      z-index: 1;
+    }
+  }
+
+  .categories-scrollbar {
+    height: 145px;
+  }
+
   .categories-list {
     display: flex;
 
@@ -43,6 +77,7 @@
 
   .search-bar {
     width: 100%;
+    margin: 30px 0 20px;
 
     ::ng-deep {
       [matprefix] {
@@ -88,6 +123,9 @@
     font-weight: 500;
     align-items: center;
     justify-content: center;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
+    width: 100%;
   }
 
   .checkout {
@@ -129,19 +167,24 @@
     }
 
     .cart {
+      /deep/ .mat-icon {
+        display: none;
+      }
+
       &.empty {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
+        flex-direction: column;
       }
     }
 
     .tiles-list {
-      max-height: 300px;
+      height: 300px;
     }
 
     .selected-tiles-list {
-      max-height: 300px;
+      max-height: 500px;
 
       .selected-tile {
         padding-bottom: 2px;
@@ -193,15 +236,23 @@
     .cart {
       display: none !important;
 
+      /deep/ .mat-icon {
+        display: flex !important;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+      }
+
       &.show {
         position: absolute;
-        height: 300px;
-        width: 300px;
+        height: 100%;
+        width: 100%;
         right: 0;
         z-index: 1;
         display: flex !important;
         background: #fff;
         border: 1px solid #ccc;
+        flex-direction: column;
       }
     }
   }
