--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<script src="../../app.component.spec.ts"></script>
 <app-carousel [slides]="carouselSlides"></app-carousel>
 <app-form-get-started></app-form-get-started>
 
