--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700 !important;
 }
 
+h1 {
+  margin-bottom: 3rem;
+}
+
 .container {
   max-width: 1050px;
   margin: 0 auto;
