--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -3,7 +3,21 @@
 
   <div class="row checkout">
     <div class="col-md-8">
-      <div *ngIf="isShowNavScrollbar" class="nav-scrollbar">
+      <div #categoriesRef class="categories-list">
+        <div
+          *ngFor="let category of categoriesList"
+          (click)="selectCategory(category.id)"
+          [class.active]="category.id === selectedCategory"
+          class="category"
+        >
+          <div class="category-icon">
+            <mat-icon [style.color]="category.color || 'black'">{{category.icon}}</mat-icon>
+          </div>
+          <div class="category-title" [innerText]="category.title"></div>
+        </div>
+      </div>
+
+      <div *ngIf="isShowNavCategoriesScrollbar" class="nav-scrollbar">
         <div class="nav-scrollbar-left" (click)="scrollCategories('left')">
           <mat-icon>keyboard_arrow_left</mat-icon>
         </div>
@@ -11,22 +25,6 @@
           <mat-icon>keyboard_arrow_right</mat-icon>
         </div>
       </div>
-
-      <ng-scrollbar #categoriesScrollbarRef [trackY]="false" [trackX]="true" class="categories-scrollbar">
-        <div class="categories-list">
-          <div
-            *ngFor="let category of categoriesList"
-            (click)="selectCategory(category.id)"
-            [class.active]="category.id === selectedCategory"
-            class="category"
-          >
-            <div class="category-icon">
-              <mat-icon [style.color]="category.color || 'black'">{{category.icon}}</mat-icon>
-            </div>
-            <div class="category-title" [innerText]="category.title"></div>
-          </div>
-        </div>
-      </ng-scrollbar>
 
       <mat-form-field class="search-bar">
         <input matInput placeholder="Search" type="text" name="search" (input)="onSearch($event)">
@@ -39,19 +37,26 @@
         </span>
       </mat-form-field>
 
-      <ng-scrollbar class="tiles-list">
-        <mat-grid-list cols="3">
-          <mat-grid-tile
-            *ngFor="let tile of filteredTiles"
-            class="tile"
-          >
-            <span class="tile-title" [innerText]="tile.title"></span>
-            <mat-checkbox class="tile-checkbox" [checked]="tile.isSelected"></mat-checkbox>
-            <span class="tile-selector" (click)="toggleTile(tile)"></span>
-            <img class="tile-image" [attr.src]="tile.imagePath" alt="">
-          </mat-grid-tile>
-        </mat-grid-list>
-      </ng-scrollbar>
+      <div #tilesRef class="tiles-list">
+        <div
+          *ngFor="let tile of filteredTiles"
+          class="tile"
+        >
+          <span class="tile-title" [innerText]="tile.title"></span>
+          <mat-checkbox class="tile-checkbox" [checked]="tile.isSelected"></mat-checkbox>
+          <span class="tile-selector" (click)="toggleTile(tile)"></span>
+          <img class="tile-image" [attr.src]="tile.imagePath" alt="">
+        </div>
+      </div>
+
+      <div *ngIf="isShowNavTilesScrollbar" class="nav-scrollbar">
+        <div class="nav-scrollbar-left" (click)="scrollTiles('left')">
+          <mat-icon>keyboard_arrow_left</mat-icon>
+        </div>
+        <div class="nav-scrollbar-right" (click)="scrollTiles('right')">
+          <mat-icon>keyboard_arrow_right</mat-icon>
+        </div>
+      </div>
     </div>
     <div class="col-md-4 cart" [class.show]="isShowCart" [class.empty]="!selectedTiles.length">
       <mat-icon (click)="isShowCart = false">close</mat-icon>
