--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -4,40 +4,52 @@
 
   .nav-scrollbar {
     position: relative;
+    display: flex;
+    justify-content: center;
 
     .nav-scrollbar-left {
-      position: absolute;
+      position: relative;
       left: 0;
       top: 0;
-      height: 130px;
-      width: 20px;
+      height: 30px;
+      width: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
       background: rgba(0,0,0,0.05);
       z-index: 1;
+      cursor: pointer;
+      margin-right: 10px;
+
+      &:hover {
+        background: rgba(0,0,0,0.1);
+      }
     }
 
     .nav-scrollbar-right {
-      position: absolute;
+      position: relative;
       right: 0;
       top: 0;
-      height: 130px;
-      width: 20px;
+      height: 30px;
+      width: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
       background: rgba(0,0,0,0.05);
       z-index: 1;
-    }
-  }
+      cursor: pointer;
+      margin-left: 10px;
 
-  .categories-scrollbar {
-    height: 145px;
+      &:hover {
+        background: rgba(0,0,0,0.1);
+      }
+    }
   }
 
   .categories-list {
     display: flex;
+    overflow: hidden;
+    scroll-behavior: smooth;
 
     .category {
       display: flex;
@@ -46,6 +58,12 @@
       flex-direction: column;
       padding-bottom: 12px;
       margin-bottom: 15px;
+      cursor: pointer;
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.02);
+        border-radius: 4px;
+      }
 
       &.active {
         background: rgba(0, 0, 0, 0.05);
@@ -129,39 +147,52 @@
   }
 
   .checkout {
-    ::ng-deep {
-      .mat-grid-list {
-        max-width: calc(100% - 18px);
+    .tiles-list {
+      display: flex;
+      overflow: hidden;
+      scroll-behavior: smooth;
+      flex-direction: column;
+      flex-wrap: wrap;
+      height: 366px;
 
-        .tile {
-          .tile-title {
-            position: absolute;
-            bottom: 10px;
-            background: rgba(0,0,0,0.1);
-            color: #fff;
-            padding: 0 5px;
-          }
+      .tile {
+        display: flex;
+        width: 180px;
+        height: 180px;
+        background: #ccc;
+        margin: 1px;
+        align-items: center;
+        justify-content: center;
+        flex-shrink: 0;
+        position: relative;
 
-          .tile-checkbox {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-          }
+        .tile-title {
+          position: absolute;
+          bottom: 10px;
+          background: rgba(0,0,0,0.1);
+          color: #fff;
+          padding: 0 5px;
+        }
 
-          .tile-image {
-            max-width: 100%;
-            max-height: 100%;
-          }
+        .tile-checkbox {
+          position: absolute;
+          top: 10px;
+          left: 10px;
+        }
 
-          .tile-selector {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            left: 0;
-            top: 0;
-            z-index: 2;
-            cursor: pointer;
-          }
+        .tile-image {
+          max-width: 100%;
+          max-height: 100%;
+        }
+
+        .tile-selector {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          z-index: 2;
+          cursor: pointer;
         }
       }
     }
@@ -179,12 +210,8 @@
       }
     }
 
-    .tiles-list {
-      height: 300px;
-    }
-
     .selected-tiles-list {
-      max-height: 500px;
+      max-height: 560px;
 
       .selected-tile {
         padding-bottom: 2px;
