--- a/src/app/components/checkout/checkout.component.scss
+++ b/src/app/components/checkout/checkout.component.scss
@@ -1,13 +1,17 @@
 :host {
   display: block;
-  margin: 80px 0;
+  margin: 20px 0;
+
+  .header {
+    color: #1c1e21;
+  }
 
   .nav-scrollbar {
     position: relative;
     display: flex;
     justify-content: center;
-    margin: 20px 0;
-
+    margin: 0 0 4px 0;
+    
     .nav-scrollbar-left {
       position: relative;
       left: 0;
@@ -17,7 +21,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: rgba(0,0,0,0.05);
+      background: white;
       z-index: 1;
       cursor: pointer;
       margin-right: 10px;
@@ -77,30 +81,32 @@
 
     .category {
       display: flex;
-      width: 80px;
+      width: 100px;
       flex-shrink: 0;
       flex-direction: column;
       padding-bottom: 12px;
-      margin-bottom: 15px;
+      margin: 0 2px 15px 0;
       cursor: pointer;
+      background-color: lightgray;
+      border-radius: 4px;
 
       &:hover {
-        background: rgba(0, 0, 0, 0.02);
+        background: turquoise;
         border-radius: 4px;
       }
 
       &.active {
-        background: rgba(0, 0, 0, 0.05);
+        background: turquoise;
         border-radius: 4px;
-        box-shadow: inset 0 2px 2px rgba(0,0,0,0.3);
       }
 
       .category-icon {
         display: flex;
-        width: 80px;
-        height: 80px;
+        width: 100px;
+        height: 100px;
         align-items: center;
         justify-content: center;
+        color: white;
 
         /deep/ .mat-icon {
           font-size: 50px;
@@ -113,13 +119,15 @@
         text-align: center;
         font-size: 12px;
         padding: 0 5px;
+        color:white;
       }
     }
   }
 
   .search-bar {
     width: 100%;
-    margin: 30px 0 20px;
+    margin: 5px 0 10px;
+    color: #1c1e21;
 
     ::ng-deep {
       [matprefix] {
@@ -181,8 +189,8 @@
 
       .tile {
         display: flex;
-        width: 180px;
-        height: 180px;
+        width: 50px;
+        height: 50px;
         background: #ccc;
         margin: 1px;
         align-items: center;
