Home page changes

--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -45,7 +45,7 @@
 
                       .mat-button {
                         margin: 30px 0 0;
-                        background-color: #ff5114;
+                        background-color:#25b9c6;
                         border: none;
                         color: #fff;
                         font-size: 14px;
