--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,21 +1,22 @@
 <div class="container">
   <div class="row logo-market-icons">
-    <div class="col-md-4">
-      <a [routerLink]="['/']">
-        <img class="logo" src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/logo/Logo.svg" alt="Out of Milk" height="29">
+    <div class="col-md-3">
+      <a [routerLink]="['/']" class="logo">
+        Hiber
       </a>
     </div>
-    <div class="col-md-8 market-icons">
-      <a href="https://app.adjust.com/504j97?campaign=Web&amp;adgroup=Homepage">
+    <div class="col-md-9 market-icons">
+      <span class="info">Apps available soon for</span>
+      <a href="/">
         <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/storeBadges/badge_apple_app_store_en.png" alt="App Store" height="25">
       </a>
-      <a href="https://app.adjust.com/qlpd7p?campaign=Web&amp;adgroup=Homepage">
+      <a href="/">
         <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/storeBadges/badge_google_play_en.png" alt="Google Play" height="25">
       </a>
-      <a href="http://bit.ly/OOM-Alexa" class="store-links__alexa">
+      <a href="/" class="store-links__alexa">
         <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/storeBadges/badge_alexa.svg" alt="Alexa" width="100" height="25">
       </a>
-      <a href="http://bit.ly/OOM_Home" class="store-links__google-assistant">
+      <a href="/" class="store-links__google-assistant">
         <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/storeBadges/badge_google_assistant.png" alt="Google Assistant" height="25">
       </a>
     </div>
@@ -31,17 +32,17 @@
     </button>
   </mat-list>
 
-  <div class="copyright">Copyright © 2010–2019 Bonial International GmbH. Out of Milk is © Bonial International GmbH.</div>
+  <div class="copyright">Copyright © 2019 Hiber GmbH.</div>
 
   <mat-list class="social">
     <mat-list-item class="facebook">
-      <a href="http://www.facebook.com/pages/Out-of-Milk/101211643275689">
+      <a href="/">
         <span class="icon-facebook-with-circle"></span>
         <span>Join us On Facebook</span>
       </a>
     </mat-list-item>
     <mat-list-item class="twitter">
-      <a href="https://twitter.com/outofmilk">
+      <a href="/">
         <span class="icon-twitter-with-circle"></span>
         <span>Follow us on Twitter</span>
       </a>
