--- a/src/app/components/form-get-started/form-get-started.component.html
+++ b/src/app/components/form-get-started/form-get-started.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <h3>A new way to manage your <span [style.color]="'#595AD4'">roadmap</span></h3>
-  <p>Plan. Organize. Track. In one visual, collaborative space.</p>
+  <h3>A innovative way to manage your <span [style.color]="'#25b9c6'">grocery</span></h3>
+  <p>Save on an average of 400‎€ yearly on grocery shopping</p>
   <form #getStartedForm="ngForm" (ngSubmit)="getStarted(getStartedForm)">
     <mat-form-field>
-      <input matInput placeholder="Enter your work email" name="email" ngModel>
+      <input matInput placeholder="Enter your zipcode" name="zipcode" ngModel>
     </mat-form-field>
 
     <button mat-button class="submit-get-started">Get started</button>
