--- a/src/app/components/form-get-started/form-get-started.component.scss
+++ b/src/app/components/form-get-started/form-get-started.component.scss
@@ -60,7 +60,7 @@
     }
 
     .submit-get-started {
-      background-color: #595ad4;
+      background-color: #25b9c6;
       color: #fff;
       border-radius: 30px;
       font-size: 16px;
