--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,8 +5,8 @@
 <div class="shopping">
   <div class="container">
     <div class="shopping-description">
-      <h3 class="h3">Shopping List</h3>
-      <p>Easily create and manage your grocery lists with friends and family.</p>
+      <h3 class="h3">Grocery shopping</h3>
+      <p>Easily create and manage your grocery.</p>
 
       <mat-list>
         <mat-list-item *ngFor="let shopping of shoppingList">
@@ -16,6 +16,10 @@
       </mat-list>
     </div>
 
-    <img src="https://ddnh378lrqdgf.cloudfront.net/static/images/new/featured/shopping_list.png" class="shopping-image" alt="Shopping">
+    <img src="/assets/home/carousel/grocery.png" class="shopping-image" alt="Shopping">
   </div>
+</div>
+
+<div class="container">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAD30PYPQJDIi-FKYF3sYvaCojnnLu0BBeLasZY6fKt1lbrg/viewform?embedded=true" width="640" height="1589" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </div>
