--- a/src/app/components/form-get-started/form-get-started.component.scss
+++ b/src/app/components/form-get-started/form-get-started.component.scss
@@ -52,6 +52,7 @@
             overflow: initial;
 
             .mat-form-field-label {
+              color: #00a9ff;
               transform: translateY(-2.2rem) translateZ(0.001px) perspective(100px) scale(0.75);
             }
           }
